修复 CurseForge 源中内容不显示 Minecraft 26.x 版本的问题 (#5994)